--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,22 +1,23 @@
 <div class="footpad">
-<footer>
-
-  <div class="footer-basic-centered">
-  <div class="row" style="width:100%">
-  <div class="hidden-xs col-sm-2" style="font-size: .8em; display:flex; justify-content: flex-start; align-self:center; padding-left:0px; color:#292c2f">
-
-© 2017 La Rama
-<br>Design by Mike</div>
-
-  <div class="col-xs-12 col-sm-8 represent" >We Represent All Styles</div>
-
-<div class="hidden-xs col-sm-2" style="display:flex; justify-content: flex-end">
- <a href="https://www.facebook.com/laramarecords/" class="fa fa-facebook" aria-hidden="true"></a>
-      <a href="https://www.instagram.com/laramarecords/" class="fa fa-instagram" aria-hidden="true"></a>
-      <a href="https://www.discogs.com/user/LaRamaRecords" class="fa" ><img src="https://www.discogs.com/images/brand/discogs-logo.svg" style="width: 50px; height: 50px;"></a>
+  <footer>
+    <div class="footer-basic-centered">
+      <div class="row" style="width:100%">
+        <div class="hidden-xs col-sm-2 leftfoot">
+          © 2017 La Rama
+          <br>
+          Design by Mike
+        </div>
+        <div class="col-xs-12 col-sm-8 represent">
+          We Represent All Styles
+        </div>
+        <div class="hidden-xs col-sm-2 rightfoot">
+          <a href="https://www.facebook.com/laramarecords/" class="fa fa-facebook" aria-hidden="true"></a>
+          <a href="https://www.instagram.com/laramarecords/" class="fa fa-instagram" aria-hidden="true"></a>
+          <a href="https://www.discogs.com/user/LaRamaRecords" class="fa" >
+            <img id="discogs" src="https://www.discogs.com/images/brand/discogs-logo.svg">
+          </a>
+        </div>
+      </div>
     </div>
-
-    </div>
-  </div>
-</footer>
+  </footer>
 </div>
