--- a/app/views/records/_records_list.html.erb
+++ b/app/views/records/_records_list.html.erb
@@ -3,16 +3,16 @@
 
 <div class="container">
   <div class="row filterrow">
-    <div class="col-xs-3 col-sm-1 leftpad">
+    <div class="col-xs-3 col-sm-2 col-md-1 leftpad">
       <div class="filter"><a class="dark">Filter</a></div>
       <!-- <input type="text" id="q" class="form-control" /> -->
     </div>
 
-    <div class="col-xs-3 col-sm-1 leftpad">
+    <div class="col-xs-3 col-sm-2 col-md-1 leftpad">
       <div class="filter dark" id="temparature_montreal"></div>
     </div>
 
-    <div class="hidden-xs col-sm-8">
+    <div class="hidden-xs col-sm-4 col-md-8">
     <div class="scroll-left">
         <a class="dark" href="https://tinyurl.com/y9cuey8t">
          <!--  <p>Silence of The Lambi 10/27 @ Club Lambi</p> -->
@@ -21,11 +21,11 @@
 
     </div>
 
-    <div class="col-xs-3 col-sm-1">
-
+    <div class="col-xs-3 col-sm-2 col-md-1">
+      <div id="sort-by-container"></div>
     </div>
 
-    <div class="col-xs-3 col-sm-1" id="pager">
+    <div class="col-xs-3 col-sm-2 col-md-1" id="pager">
       <div  id="hits-per-page-selector"></div>
     </div>
   </div>
