--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -95,43 +95,6 @@ padding-right: 10px;
 
 
 
-tbody{
-    display: table-row-group;
-    vertical-align: middle;
-    border-color: inherit;
-}
-
-tr {
-    display: table-row;
-    vertical-align: inherit;
-    border-color: inherit;
-   font-size:1em;
-}
-
-table {
-  text-size: 1.5em;
-  width: 100%;
-  // border-collapse: collapse;
-  th, td {
-  border-bottom: solid 1px #d4d8e3 !important;
-  border-top: solid 1px #d4d8e3 !important;
-  padding: 0px;
-  }
-  tr:nth-child(even) {
-    background-color: #77777;
-  }
-}
-
-table td {
-  padding:0px;
-  padding-right: 10px;
-}
-
-td {
-
-    display: table-cell;
-    vertical-align: inherit;
-}
 
 
 
@@ -594,6 +557,49 @@ img {
 }
 }
 
+// @media (min-width: 778px) and (max-width: 991px){
+// .container {
+//     width: auto;
+// }
+
+//   .video {
+//     position: relative;
+//     height: 325px;
+//     width: 100%;
+// }
+
+//   .video__youtube {
+//     padding-bottom: 100%;
+//     width: 100%;
+//     height: 325px;
+//     overflow: hidden;
+//     position: relative;
+//     -o-object-fit: cover;
+//     object-fit: cover;
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: center;
+// }
+
+//   .video__placeholder {
+//     max-width: 100%;
+//     position: absolute;
+//     max-height: 100%;
+
+// }
+//     .video__iframe {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 325px;
+// }
+
+
+
+// }
+
+
 @media screen and (max-width: 778px) {
     .modal-content {
         width: 100%;
@@ -636,6 +642,9 @@ img {
     position: relative;
     -o-object-fit: cover;
     object-fit: cover;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
   .video__placeholder {
@@ -665,11 +674,15 @@ img {
 
   .tracks{
     border-left: none;
+    height: auto;
   }
 
   #prices{
   padding: 0px 10px;
 }
+
+
+
 
 }
 
