--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -8,6 +8,7 @@
   flex-direction: column;
       border-left: solid 1px #d4d8e3 !important;
       max-height:350px;
+          height: 23vw;
 }
 
 
