--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,9 @@
 <div class="footpad">
   <footer>
     <div class="footer-basic-centered">
-      <div class="row" style="width:100%">
+      <div class="row aligned">
         <div class="hidden-xs col-sm-2 leftfoot">
-          © 2017 La Rama
-          <br>
-          Design by Mike
+          © 2017 Mike Cassidy
         </div>
         <div class="col-xs-12 col-sm-8 represent">
           We Represent All Styles
