--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -99,3 +99,11 @@ footer .fa {
   width: 50px;
   height: 50px;
 }
+
+
+.aligned{
+  width: 100%;
+  display: flex;
+    flex-direction: row;
+    align-items: center;
+}
