--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -1,6 +1,6 @@
 <div class="main">
   <div class="container cut">
-    <div class="row showpanel">
+    <div class="row showpanel flexer">
       <div class="card col-xs-12 col-sm-4 zoomrecord">
         <div class="video">
           <div class="video__youtube" data-youtube>
@@ -17,6 +17,7 @@
         <p>Catno: <%= @record.catno rescue nil%></p>
         <p>Country: <%= @record.country rescue nil %></p>
         <p>Genre: <%= @record.genre  rescue nil%></p>
+        <p>Format: 12"</p>
         <p>Year: <%= @record.year rescue nil%></p>
       </div>
 
