--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -78,7 +78,7 @@ padding-right: 10px;
 
 .cut {
   margin-top: 2.5em;
-  margin-bottom: 1em;
+  margin-bottom: 10px;
 }
 
 
@@ -592,6 +592,15 @@ img {
   .container {
       width: auto;
   }
+
+  .flexer{
+    display:flex;
+  }
+
+  .description > h1 {
+    margin-top: 0px;
+    padding-top: 0px;
+  }
 }
 
 @media (max-width: 767px){
@@ -704,6 +713,25 @@ img {
 .ais-hits--item > .col-md-3{
   width: 50%;
   }
+
+
+  .video__iframe {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 323px;
+}
+
+.video__youtube {
+    display: block;
+    width: 100%;
+    max-height: 350px;
+    height: 323px;
+    overflow: hidden;
+    -o-object-fit: cover;
+    object-fit: cover;
+}
 }
 
 
