--- a/app/assets/stylesheets/youtube.scss
+++ b/app/assets/stylesheets/youtube.scss
@@ -13,7 +13,7 @@ height:350px;
   top: 0;
   left: 0;
   width: 100%;
-  height: 350px;
+  height: 23vw;
 }
 
 .video__placeholder {
@@ -27,6 +27,7 @@ height:350px;
     display: block;
     width: 100%;
     max-height: 350px;
+    height: 23vw;
     overflow: hidden;
     object-fit: cover;
 
