--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -706,6 +706,14 @@ img {
         height: 27vw;
   }
 
+
+  .video__placeholder {
+    max-width: 100%;
+    position: relative;
+    max-height: 350px;
+    height: 27vw;
+}
+
   .video__youtube {
     display: block;
     width: 100%;
@@ -714,6 +722,14 @@ img {
     overflow: hidden;
     -o-object-fit: cover;
     object-fit: cover;
+}
+
+  .video__iframe {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 27vw;
 }
 
     .description > h1 {
@@ -772,6 +788,14 @@ img {
     -o-object-fit: cover;
     object-fit: cover;
 }
+
+   .video__placeholder {
+    max-width: 100%;
+    position: relative;
+    max-height: 350px;
+      height: 100%;
+}
+
 
   .description {
       text-align: center;
