--- a/app/views/records/_records_list.html.erb
+++ b/app/views/records/_records_list.html.erb
@@ -4,27 +4,21 @@
 <div class="container">
   <div class="row filterrow">
     <div class="col-xs-3 col-sm-2 col-md-1 leftpad">
-      <div class="filter"><a class="dark">Filter</a></div>
+      <div class="filter"><a class="dark">Genre</a></div>
       <!-- <input type="text" id="q" class="form-control" /> -->
     </div>
 
-    <div class="col-xs-3 col-sm-2 col-md-1 leftpad">
-      <div class="filter dark" id="temparature_montreal"></div>
+    <div class="col-xs-3 col-sm-2 col-md-1">
+      <div id="price"><a class="dark">Price</a></div>
     </div>
 
     <div class="hidden-xs col-sm-4 col-md-8">
-    <div class="scroll-left">
-        <a class="dark" href="https://tinyurl.com/y9cuey8t">
-         <!--  <p>Silence of The Lambi 10/27 @ Club Lambi</p> -->
-        </a>
-      </div>
 
+      <div class="priceslide showpanel" id="prices"></div>
     </div>
-
-    <div class="col-xs-3 col-sm-2 col-md-1">
-      <div id="sort-by-container"></div>
+    <div class="col-xs-3 col-sm-2 col-md-1 leftpad">
+      <div class="filter dark" id="temparature_montreal"></div>
     </div>
-
     <div class="col-xs-3 col-sm-2 col-md-1" id="pager">
       <div  id="hits-per-page-selector"></div>
     </div>
@@ -34,7 +28,7 @@
   <div class="row">
     <div class="col-xs-12 filter-drop showpanel" id="facets">
       <div id="genre"></div>
-      <div id="prices"></div>
+
     </div>
   </div>
 
