--- a/app/assets/stylesheets/pages/_records_list.scss
+++ b/app/assets/stylesheets/pages/_records_list.scss
@@ -59,6 +59,14 @@ display: flex;
   padding: 0px 15px;
 }
 
+#price {
+    display: inline-block;
+  background-color: #fff;
+    border: solid 1px #d4d8e3!important;
+  border-radius: 4px;
+  padding: 7px 16px 7px 16px;
+  box-shadow: 0 1px 1px 0 rgba(85,95,110,.2)!important;
+}
 
 #hits-per-page-selector {
     padding-right: 0px;
