--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,10 @@ $(document).ready(function() {
     $('.filter-drop').toggle(200);
   });
 
+      $('#price').on('click', () => {
+    $('.priceslide').toggle(200);
+  });
+
        $('.navbar-wagon-right').on('click', () => {
     $('.searchbar').toggle(100);
   });
