--- a/app/views/records/_records_list.html.erb
+++ b/app/views/records/_records_list.html.erb
@@ -8,7 +8,7 @@
       <!-- <input type="text" id="q" class="form-control" /> -->
     </div>
 
-    <div class="col-xs-3 col-sm-2 col-md-1">
+    <div class="col-xs-3 col-sm-2 col-md-1 leftpad">
       <div id="price"><a class="dark">Price</a></div>
     </div>
 
