--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,4 +1,5 @@
 .tracks{
+   color: #555555;
   padding: 0px;
   padding-bottom: 10px;
   padding-top: 10px;
@@ -13,6 +14,7 @@
 
 
 .description {
+  color: #555555;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -164,3 +166,37 @@ td {
     background-color: white;
 }
 
+
+
+@media (max-width: 400px){
+
+
+ .description {
+      text-align: center;
+      padding: 0px;
+      justify-content: center;
+      align-items: center;
+      }
+
+    .description > h1 {
+    font-size: 1.5em;
+    }
+
+      .description > p {
+    font-size: 1em;
+  }
+
+
+
+    .tracks{
+      border-left: none;
+      height: auto;
+    }
+ tr{
+        display: table-row;
+    vertical-align: inherit;
+    border-color: inherit;
+    font-size: 1em;
+  }
+
+}
