--- a/app/assets/stylesheets/pages/_records_list.scss
+++ b/app/assets/stylesheets/pages/_records_list.scss
@@ -34,7 +34,7 @@ display: flex;
   box-shadow: 0 1px 1px 0 rgba(85,95,110,.2)!important;
   }
   a {
-    background-color: #fff
+    background-color: #292c2f
   }
 }
 
@@ -47,7 +47,7 @@ display: flex;
 
 #temparature_montreal {
   display: inline-block;
-  background-color: #fff;
+  background-color: #292c2f;
     border: solid 1px #d4d8e3!important;
   border-radius: 4px;
   padding: 7px 16px 7px 16px;
@@ -67,7 +67,7 @@ display: flex;
   align-items: center;
   cursor: pointer;
     display: inline-block;
-  background-color: #fff;
+  background-color: #292c2f;
     border: solid 1px #d4d8e3!important;
   border-radius: 4px;
   padding: 7px 16px 7px 16px;
@@ -109,7 +109,7 @@ display: flex;
 
 
 .dark{
-  color:#626262;
+  color:#e9eae7;
 }
 
 .records-display {
