--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -11,14 +11,14 @@
       </div>
 
       <div class="card-contents col-xs-12 col-sm-4 description">
-        <h1><%= @record.name rescue nil%></h1>
-        <p>Artist: <%= @record.artist rescue nil%></p>
-        <p>Label: <%= @record.label rescue nil%></p>
-        <p>Catno: <%= @record.catno rescue nil%></p>
-        <p>Country: <%= @record.country rescue nil %></p>
-        <p>Genre: <%= @record.genre  rescue nil%></p>
-        <p>Format: 12"</p>
-        <p>Year: <%= @record.year rescue nil%></p>
+        <h1><b><%= @record.name rescue nil%></b></h1>
+        <p>Artist: <b><%= @record.artist rescue nil%></b></p>
+        <p>Label: <b><%= @record.label rescue nil%></b></p>
+        <p>Catno: <b><%= @record.catno rescue nil%></b></p>
+        <p>Country: <b><%= @record.country rescue nil %></b></p>
+        <p>Genre: <b><%= @record.genre  rescue nil%></b></p>
+        <p>Format: <b>12"</b></p>
+        <p>Year: <b><%= @record.year rescue nil%></b></p>
       </div>
 
       <div class="card-contents col-xs-12 col-sm-4 tracks">
