--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -120,7 +120,7 @@ a:active {
 }
 
 a:hover {
-  color: #388697;
+  color: #ffea36;
   text-decoration: none;
 }
 
@@ -799,4 +799,21 @@ img {
  -webkit-transform: translateX(-100%); /* Browser bug fix */
  transform: translateX(-100%);
  }
+}
+
+
+.btn-cool {
+    /* color: #646464; */
+    /* border: 1px solid #999999; */
+    /* padding: 10px 15px; */
+    /* border-radius: 50px; */
+    /* font-weight: lighter; */
+    color: #e9eae7;
+    opacity: 0.9;
+    border: solid 1px #d4d8e3 !important;
+    border-radius: 4px;
+    padding: 7px 7px 7px 7px;
+    -webkit-box-shadow: 0 1px 1px 0 rgba(85, 95, 110, 0.2) !important;
+    box-shadow: 0 1px 1px 0 rgba(85, 95, 110, 0.2) !important;
+    background-color: #292c2f;
 }
