--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,5 +1,5 @@
 .tracks{
-   color: #555555;
+   color: #292c2f;
   padding: 0px;
   padding-bottom: 10px;
   padding-top: 10px;
@@ -14,10 +14,10 @@
 
 
 .description {
-  color: #555555;
+  color: #292c2f;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
 }
 
@@ -26,7 +26,7 @@
 
 
 .description > p {
-  font-size: 1.5vw;
+  font-size: 1.4vw;
     letter-spacing: -.2px;
 }
 
@@ -34,7 +34,7 @@
   margin-top: 10px;
   padding-top: 0px;
   margin-bottom: 5px;
-      font-size: 1.7vw;
+      font-size: 1.6vw;
 }
 
 .centers{
@@ -101,7 +101,7 @@
 
 
 .showpanel{
-    background-color: white;
+    background-color: #e9eae7;
     border: solid 1px #d4d8e3 !important;
     border-radius: 4px;
     /* padding: 7px 16px 7px 16px; */
