--- a/app/assets/stylesheets/pages/_records_list.scss
+++ b/app/assets/stylesheets/pages/_records_list.scss
@@ -143,7 +143,7 @@ display: flex;
   }
   p {
     font-weight: bold;
-    color: #646464;
+    color: #292c2f;
     font-size: 0.5em;
     margin-bottom: 0em;
   }
