--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -817,3 +817,13 @@ img {
     box-shadow: 0 1px 1px 0 rgba(85, 95, 110, 0.2) !important;
     background-color: #292c2f;
 }
+
+.btn-cool:hover {
+    opacity: .8;
+    text-decoration: none;
+    color: #ffea36;
+}
+
+.badge{
+  background-color: transparent;
+}
