--- a/app/views/records/_records_list.html.erb
+++ b/app/views/records/_records_list.html.erb
@@ -26,7 +26,7 @@
 
 
   <div class="row">
-    <div class="col-xs-12 filter-drop showpanel" id="facets">
+    <div class="col-xs-12 filter-drop showpanel deep" id="facets">
       <div id="genre"></div>
 
     </div>
